k8s/talos/apps/verksted/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verksted-app
  namespace: verksted
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: verksted-app
  ports:
    - name: http
      port: 8080
      targetPort: http
