k8s/talos/apps/verksted/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: verksted
  namespace: verksted
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
  hostnames:
    - "verksted.local.bigd.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: verksted-app
          port: 8080
          weight: 1
